--- a/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.cbp
+++ b/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.cbp
@@ -9,7 +9,7 @@
 			<Target title="Unix x86">
 				<Option output="ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
 				<Option type="3" />
-				<Option compiler="gcc" />
+				<Option compiler="gnu_gcc_49_compiler" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Option projectLinkerOptionsRelation="2" />
@@ -32,7 +32,7 @@
 			<Target title="Unix x64">
 				<Option output="ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
 				<Option type="3" />
-				<Option compiler="gcc" />
+				<Option compiler="gnu_gcc_49_compiler" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
@@ -48,10 +48,29 @@
 					<Add option="-DARDUINOCOMMDLL_EXPORTS" />
 				</Compiler>
 			</Target>
+			<Target title="Unix ARM">
+				<Option output="ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option type="3" />
+				<Option compiler="gnu_gcc_49_compiler" />
+				<Option createDefFile="1" />
+				<Option createStaticLib="1" />
+				<Compiler>
+					<Add option="-std=c++11" />
+					<Add option="-fPIC" />
+					<Add option="-marm" />
+					<Add option="-Winvalid-pch" />
+					<Add option="-DARM" />
+					<Add option="-DNDEBUG" />
+					<Add option="-DNOTMATLAB" />
+					<Add option="-D_UNIX" />
+					<Add option="-D_USRDLL" />
+					<Add option="-DARDUINOCOMMDLL_EXPORTS" />
+				</Compiler>
+			</Target>
 			<Target title="Matlab Unix x64">
 				<Option output="ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
 				<Option type="3" />
-				<Option compiler="gcc" />
+				<Option compiler="gnu_gcc_49_compiler" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
@@ -70,7 +89,7 @@
 			<Target title="Matlab Unix x86">
 				<Option output="ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
 				<Option type="3" />
-				<Option compiler="gcc" />
+				<Option compiler="gnu_gcc_49_compiler" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
@@ -80,6 +99,25 @@
 					<Add option="-Dx86" />
 					<Add option="-DMATLAB" />
 					<Add option="-DNDEBUG" />
+					<Add option="-D_UNIX" />
+					<Add option="-D_USRDLL" />
+					<Add option="-DARDUINOCOMMDLL_EXPORTS" />
+				</Compiler>
+			</Target>
+			<Target title="Matlab Unix ARM">
+				<Option output="ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option type="3" />
+				<Option compiler="gnu_gcc_49_compiler" />
+				<Option createDefFile="1" />
+				<Option createStaticLib="1" />
+				<Compiler>
+					<Add option="-std=c++11" />
+					<Add option="-fPIC" />
+					<Add option="-marm" />
+					<Add option="-Winvalid-pch" />
+					<Add option="-DARM" />
+					<Add option="-DNDEBUG" />
+					<Add option="-DMATLAB" />
 					<Add option="-D_UNIX" />
 					<Add option="-D_USRDLL" />
 					<Add option="-DARDUINOCOMMDLL_EXPORTS" />
@@ -95,6 +133,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="ArduinoClass.h">
 			<Option target="Unix x86" />
@@ -105,6 +145,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="ArduinoCommCDLL.cpp">
 			<Option target="Unix x86" />
@@ -115,6 +157,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="ArduinoCommCDLL.h">
 			<Option target="Unix x86" />
@@ -125,6 +169,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="ArduinoCommCSO.h" />
 		<Unit filename="ArduinoCommDLL.cpp">
@@ -136,6 +182,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="ArduinoCommDLL.h">
 			<Option target="Unix x86" />
@@ -146,6 +194,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="ArduinoCommSO.h" />
 		<Unit filename="CoreFunctions.cpp">
@@ -157,6 +207,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="CoreFunctions.h">
 			<Option target="Unix x86" />
@@ -167,6 +219,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="Logging.cpp">
 			<Option target="Unix x86" />
@@ -177,6 +231,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="Logging.h">
 			<Option target="Unix x86" />
@@ -187,6 +243,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="SerialGeneric.cpp">
 			<Option target="Unix x86" />
@@ -197,6 +255,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="SerialGeneric.h">
 			<Option target="Unix x86" />
@@ -207,6 +267,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="SerialUnix.cpp">
 			<Option target="Unix x86" />
@@ -217,6 +279,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="SerialUnix.h">
 			<Option target="Unix x86" />
@@ -227,6 +291,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="SerialWindows.cpp">
 			<Option target="Unix x86" />
@@ -237,6 +303,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="SerialWindows.h">
 			<Option target="Unix x86" />
@@ -247,6 +315,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="dllmain.cpp">
 			<Option target="Unix x86" />
@@ -257,6 +327,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="stdafx.cpp">
 			<Option compile="0" />
@@ -269,6 +341,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="stdafx.h">
 			<Option compile="1" />
@@ -281,6 +355,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Unit filename="targetver.h">
 			<Option target="Unix x86" />
@@ -291,6 +367,8 @@
 			<Option target="Release x64" />
 			<Option target="Matlab Unix x64" />
 			<Option target="Matlab Unix x86" />
+			<Option target="Unix ARM" />
+			<Option target="Matlab Unix ARM" />
 		</Unit>
 		<Extensions>
 			<code_completion />
