--- a/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.cbp
+++ b/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.cbp
@@ -9,7 +9,7 @@
 			<Target title="Unix x86">
 				<Option output="ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
 				<Option type="3" />
-				<Option compiler="gnu_gcc_49_compiler" />
+				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Option projectLinkerOptionsRelation="2" />
@@ -32,7 +32,7 @@
 			<Target title="Unix x64">
 				<Option output="ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
 				<Option type="3" />
-				<Option compiler="gnu_gcc_49_compiler" />
+				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
@@ -49,7 +49,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Unix ARM">
-				<Option output="ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option output="libArduinoCommDLL" prefix_auto="1" extension_auto="1" />
 				<Option type="3" />
 				<Option compiler="gnu_gcc_49_compiler" />
 				<Option createDefFile="1" />
@@ -68,7 +68,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Matlab Unix x64">
-				<Option output="ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option output="libArduinoCommDLL" prefix_auto="1" extension_auto="1" />
 				<Option type="3" />
 				<Option compiler="gnu_gcc_49_compiler" />
 				<Option createDefFile="1" />
@@ -87,7 +87,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Matlab Unix x86">
-				<Option output="ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option output="libArduinoCommDLL" prefix_auto="1" extension_auto="1" />
 				<Option type="3" />
 				<Option compiler="gnu_gcc_49_compiler" />
 				<Option createDefFile="1" />
@@ -105,7 +105,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Matlab Unix ARM">
-				<Option output="ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option output="libArduinoCommDLL" prefix_auto="1" extension_auto="1" />
 				<Option type="3" />
 				<Option compiler="gnu_gcc_49_compiler" />
 				<Option createDefFile="1" />
