--- a/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.cbp
+++ b/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.cbp
@@ -6,8 +6,9 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Unix x86">
-				<Option output="ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+			<Target title="Unix_x86">
+				<Option output="../Output/x86/Unix/ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option object_output="Intermediate/x86/Unix/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
@@ -18,19 +19,25 @@
 					<Add option="-m32" />
 					<Add option="-fPIC" />
 					<Add option="-Winvalid-pch" />
+					<Add option="-pthread" />
 					<Add option="-Dx86" />
-					<Add option="-DNDEBUG" />
 					<Add option="-DNOTMATLAB" />
 					<Add option="-D_UNIX" />
-					<Add option="-D_USRDLL" />
-					<Add option="-DARDUINOCOMMDLL_EXPORTS" />
 				</Compiler>
 				<Linker>
 					<Add option="-m32" />
+					<Add option="-pthread" />
 				</Linker>
+				<ExtraCommands>
+					<Add after="mv $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_FILE).1.0" />
+					<Add after="ln -sf $(TARGET_OUTPUT_BASENAME).so.1.0 $(TARGET_OUTPUT_FILE).1" />
+					<Add after="ln -sf $(TARGET_OUTPUT_BASENAME).so.1.0 $(TARGET_OUTPUT_FILE)" />
+				</ExtraCommands>
 			</Target>
-			<Target title="Unix x64">
-				<Option output="ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+			<Target title="Unix_x64">
+				<Option output="../Output/x64/Unix/ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../Output/x64/Unix" />
+				<Option object_output="Intermediate/x64/Unix/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
@@ -40,37 +47,73 @@
 					<Add option="-fPIC" />
 					<Add option="-m64" />
 					<Add option="-Winvalid-pch" />
+					<Add option="-pthread" />
 					<Add option="-Dx64" />
-					<Add option="-DNDEBUG" />
 					<Add option="-DNOTMATLAB" />
 					<Add option="-D_UNIX" />
-					<Add option="-D_USRDLL" />
-					<Add option="-DARDUINOCOMMDLL_EXPORTS" />
 				</Compiler>
+				<Linker>
+					<Add option="-pthread" />
+				</Linker>
+				<ExtraCommands>
+					<Add after="mv $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_FILE).1.0" />
+					<Add after="ln -sf $(TARGET_OUTPUT_BASENAME).so.1.0 $(TARGET_OUTPUT_FILE).1" />
+					<Add after="ln -sf $(TARGET_OUTPUT_BASENAME).so.1.0 $(TARGET_OUTPUT_FILE)" />
+				</ExtraCommands>
 			</Target>
-			<Target title="Unix ARM">
-				<Option output="libArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+			<Target title="Unix_ARM">
+				<Option output="../Output/ARM/Unix/ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option object_output="Intermediate/ARM/Unix/" />
 				<Option type="3" />
-				<Option compiler="gnu_gcc_49_compiler" />
+				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-std=c++11" />
-					<Add option="-fPIC" />
 					<Add option="-marm" />
+					<Add option="-fPIC" />
 					<Add option="-Winvalid-pch" />
+					<Add option="-pthread" />
 					<Add option="-DARM" />
-					<Add option="-DNDEBUG" />
 					<Add option="-DNOTMATLAB" />
 					<Add option="-D_UNIX" />
-					<Add option="-D_USRDLL" />
-					<Add option="-DARDUINOCOMMDLL_EXPORTS" />
 				</Compiler>
+				<Linker>
+					<Add option="-pthread" />
+				</Linker>
+				<ExtraCommands>
+					<Add after="mv $(TARGET_OUTPUT_FILE) $(TARGET_OUTPUT_FILE).1.0" />
+					<Add after="ln -sf $(TARGET_OUTPUT_BASENAME).so.1.0 $(TARGET_OUTPUT_FILE).1" />
+					<Add after="ln -sf $(TARGET_OUTPUT_BASENAME).so.1.0 $(TARGET_OUTPUT_FILE)" />
+				</ExtraCommands>
 			</Target>
-			<Target title="Matlab Unix x64">
-				<Option output="libArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+			<Target title="Matlab_Unix_x86">
+				<Option output="../Output/x86/MatLab_Unix/ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option object_output="Intermediate/x86/MatLab_Unix/" />
 				<Option type="3" />
-				<Option compiler="gnu_gcc_49_compiler" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Option createStaticLib="1" />
+				<Compiler>
+					<Add option="-std=c++11" />
+					<Add option="-m32" />
+					<Add option="-fPIC" />
+					<Add option="-Winvalid-pch" />
+					<Add option="-pthread" />
+					<Add option="-Dx86" />
+					<Add option="-DMATLAB" />
+					<Add option="-D_UNIX" />
+				</Compiler>
+				<Linker>
+					<Add option="-m32" />
+					<Add option="-pthread" />
+				</Linker>
+			</Target>
+			<Target title="Matlab_Unix_x64">
+				<Option output="../Output/x64/MatLab_Unix/ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option object_output="Intermediate/x64/MatLab_Unix/" />
+				<Option type="3" />
+				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
@@ -78,36 +121,20 @@
 					<Add option="-fPIC" />
 					<Add option="-m64" />
 					<Add option="-Winvalid-pch" />
+					<Add option="-pthread" />
 					<Add option="-Dx64" />
 					<Add option="-DMATLAB" />
-					<Add option="-DNDEBUG" />
 					<Add option="-D_UNIX" />
-					<Add option="-D_USRDLL" />
-					<Add option="-DARDUINOCOMMDLL_EXPORTS" />
 				</Compiler>
+				<Linker>
+					<Add option="-pthread" />
+				</Linker>
 			</Target>
-			<Target title="Matlab Unix x86">
-				<Option output="libArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+			<Target title="Matlab_Unix_ARM">
+				<Option output="../Output/ARM/MatLab_Unix/ArduinoCommDLL" prefix_auto="1" extension_auto="1" />
+				<Option object_output="Intermediate/ARM/MatLab_Unix/" />
 				<Option type="3" />
-				<Option compiler="gnu_gcc_49_compiler" />
-				<Option createDefFile="1" />
-				<Option createStaticLib="1" />
-				<Compiler>
-					<Add option="-std=c++11" />
-					<Add option="-fPIC" />
-					<Add option="-Winvalid-pch" />
-					<Add option="-Dx86" />
-					<Add option="-DMATLAB" />
-					<Add option="-DNDEBUG" />
-					<Add option="-D_UNIX" />
-					<Add option="-D_USRDLL" />
-					<Add option="-DARDUINOCOMMDLL_EXPORTS" />
-				</Compiler>
-			</Target>
-			<Target title="Matlab Unix ARM">
-				<Option output="libArduinoCommDLL" prefix_auto="1" extension_auto="1" />
-				<Option type="3" />
-				<Option compiler="gnu_gcc_49_compiler" />
+				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
@@ -115,260 +142,261 @@
 					<Add option="-fPIC" />
 					<Add option="-marm" />
 					<Add option="-Winvalid-pch" />
+					<Add option="-pthread" />
 					<Add option="-DARM" />
-					<Add option="-DNDEBUG" />
 					<Add option="-DMATLAB" />
 					<Add option="-D_UNIX" />
-					<Add option="-D_USRDLL" />
-					<Add option="-DARDUINOCOMMDLL_EXPORTS" />
 				</Compiler>
+				<Linker>
+					<Add option="-pthread" />
+				</Linker>
 			</Target>
 		</Build>
 		<Unit filename="ArduinoClass.cpp">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="ArduinoClass.h">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="ArduinoCommCDLL.cpp">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="ArduinoCommCDLL.h">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="ArduinoCommCSO.h" />
 		<Unit filename="ArduinoCommDLL.cpp">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="ArduinoCommDLL.h">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="ArduinoCommSO.h" />
 		<Unit filename="CoreFunctions.cpp">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="CoreFunctions.h">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="Logging.cpp">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="Logging.h">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="SerialGeneric.cpp">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="SerialGeneric.h">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="SerialUnix.cpp">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="SerialUnix.h">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="SerialWindows.cpp">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="SerialWindows.h">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="dllmain.cpp">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="stdafx.cpp">
 			<Option compile="0" />
 			<Option link="0" />
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="stdafx.h">
 			<Option compile="1" />
 			<Option weight="0" />
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Unit filename="targetver.h">
-			<Option target="Unix x86" />
+			<Option target="Unix_x86" />
 			<Option target="Debug Win32" />
 			<Option target="Debug x64" />
-			<Option target="Unix x64" />
+			<Option target="Unix_x64" />
 			<Option target="Release Win32" />
 			<Option target="Release x64" />
-			<Option target="Matlab Unix x64" />
-			<Option target="Matlab Unix x86" />
-			<Option target="Unix ARM" />
-			<Option target="Matlab Unix ARM" />
+			<Option target="Matlab_Unix_x64" />
+			<Option target="Matlab_Unix_x86" />
+			<Option target="Unix_ARM" />
+			<Option target="Matlab_Unix_ARM" />
 		</Unit>
 		<Extensions>
 			<code_completion />
