--- a/ArduinoCommSuite/ArduinoCommTest/ArduinoCommTest.cbp
+++ b/ArduinoCommSuite/ArduinoCommTest/ArduinoCommTest.cbp
@@ -21,8 +21,8 @@
 				</Compiler>
 				<Linker>
 					<Add option="-m32" />
-					<Add option="-L$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)" />
-					<Add library="ArduinoCommDLL" />
+					<Add option="-L../Output" />
+					<Add library="ArduinoCommDLL.x86" />
 				</Linker>
 			</Target>
 			<Target title="Unix_x64">
@@ -39,6 +39,7 @@
 					<Add option="-D_UNIX" />
 				</Compiler>
 				<Linker>
+					<Add option="-m64" />
 					<Add option="-L$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)" />
 					<Add library="ArduinoCommDLL" />
 				</Linker>
@@ -47,18 +48,21 @@
 				<Option output="../Output/ARM/Unix/ArduinoCommTest" prefix_auto="1" extension_auto="1" />
 				<Option object_output="Intermediate/ARM/Unix" />
 				<Option type="1" />
-				<Option compiler="gcc" />
+				<Option compiler="gnu_gcc_49_compiler" />
 				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-std=c++11" />
 					<Add option="-marm" />
 					<Add option="-L$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)" />
-					<Add option="-lArduinoCommDLL" />
+					<Add option="-lArduinoCommDLL.ARM" />
 					<Add option="-D_UNIX" />
+					<Add directory="../Output" />
 				</Compiler>
 				<Linker>
+					<Add option="-marm" />
+					<Add option="-lArduinoCommDLL.ARM" />
 					<Add option="-L$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)" />
-					<Add library="ArduinoCommDLL" />
+					<Add directory="../Output" />
 				</Linker>
 			</Target>
 		</Build>
