--- a/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.vcxproj
+++ b/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.vcxproj
@@ -275,6 +275,7 @@ xcopy /y $(ProjectDir)ArduinoCommCDLL.h $(SolutionDir)..\BuiltLibs\OutputCopy\</
     <ClInclude Include="SerialWindows.h" />
     <ClInclude Include="SerialGeneric.h" />
     <ClInclude Include="SerialUnix.h" />
+    <ClInclude Include="SerialWindowsHID.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -321,6 +322,7 @@ xcopy /y $(ProjectDir)ArduinoCommCDLL.h $(SolutionDir)..\BuiltLibs\OutputCopy\</
     <ClCompile Include="SerialWindows.cpp" />
     <ClCompile Include="SerialGeneric.cpp" />
     <ClCompile Include="SerialUnix.cpp" />
+    <ClCompile Include="SerialWindowsHID.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
