--- a/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.vcxproj.filters
+++ b/ArduinoCommSuite/ArduinoCommDLL/ArduinoCommDLL.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="SerialWindowsHID.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SerialUnixHID.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -87,6 +90,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SerialWindowsHID.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SerialUnixHID.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
